# WinSearch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  run-elevated.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/ws-ui/: Cargo.toml  build.rs
app/ws-ui/src/: editor.rs  highlight.rs  main.rs  tray.rs  worker.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: main.rs
crates/ws-index/: Cargo.toml
crates/ws-index/src/: lib.rs  matcher.rs  persist.rs  walk.rs  win.rs
crates/ws-index/tests/: persist.rs
crates/ws-query/: Cargo.toml
crates/ws-query/src/: lib.rs
crates/ws-query/tests/: search.rs
