[workspace]
resolver = "2"
members = [
    "crates/ws-index",
    "crates/ws-query",
    "crates/ws-cli",
    "app/ws-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["STE Falcon Software"]
license = "MIT"
description = "Lightning-fast NTFS file search for Windows — reads the MFT directly and keeps the index in RAM."
repository = "https://github.com/STE-FalconSoftware/WinSearch"
homepage = "https://github.com/STE-FalconSoftware/WinSearch"
keywords = ["search", "ntfs", "mft", "filesystem", "windows"]
categories = ["filesystem", "command-line-utilities"]

[workspace.dependencies]
rayon = "1.10"
memchr = "2.7"
rustc-hash = "2.0"
parking_lot = "0.12"
arc-swap = "1.7"
anyhow = "1.0"
jwalk = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
