[package]
name = "ws-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "WinSearch"
path = "src/main.rs"

[dependencies]
ws-index = { path = "../../crates/ws-index" }
ws-query = { path = "../../crates/ws-query" }
eframe = "0.35"
egui = "0.29"
egui_extras = "0.29"
open = "5"
parking_lot = "0.12"
tray-icon = "0.19"
global-hotkey = "0.6"

[build-dependencies]
embed-manifest = "1.4"
